<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    tools:context=".MainActivity"
    android:background="@color/arkaPlan">
<LinearLayout
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">

    <TextView
        android:textColor="@color/white"
        android:id="@+id/KiloText"
        android:layout_gravity="center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/kiloTxt"
        android:textSize="23sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:textColor="@color/white"
        android:id="@+id/KiloEdit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:alpha="0.5"
        android:backgroundTint="@color/white"
        android:hint="@string/kiloEditTxt"
        android:numeric="signed"
        android:textColorHint="@color/white" />
</LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <TextView
            android:textColor="@color/white"
            android:id="@+id/BoyText"
            android:layout_gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/boyTxt"
            android:textSize="23sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
        <EditText
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            android:id="@+id/BoyEdit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/boyEditTxt"
            android:alpha="0.5"
            android:numeric="signed"
            android:backgroundTint="@color/white"
            />
    </LinearLayout>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingTop="15dp">
        <Button
            android:textColor="@color/black"
            android:backgroundTint="@color/buttonColor"
            android:id="@+id/hesaplaButon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/buttonTxt">
        </Button>
    </LinearLayout>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingTop="45dp"
        android:paddingLeft="15dp">
        <TextView
            android:textSize="23sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:text="@string/bedenİndeks"/>
        <TextView
            android:id="@+id/bkiSonuc"
            android:textColor="@color/white"
            android:singleLine="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="23sp"
            android:text="@string/bedenİndeksSonuc"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingTop="25dp">
        <TextView
            android:textSize="25sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:text="@string/bkiDurum"/>
        <TextView
            android:id="@+id/bkiDurum"
            android:textColor="@color/white"
            android:textSize="25sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/bkiTehlike"/>
    </LinearLayout>
</LinearLayout>